// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gateway tests > message validation > reject re-approving a message 1`] = `
[
  {
    "data": {
      "contract_identifier": "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.gateway",
      "raw_value": "0x0c000000070a636f6d6d616e642d69640200000020908b3539125bd138ed0f374862a28328229fb1079bce40efdab1e52f89168fae10636f6e74726163742d61646472657373051a99e2ec69ac5b6e67b4e26edd0e2c1c1a6b9bbd230a6d6573736167652d69640d00000001310c7061796c6f61642d686173680200000020373360faa7d5fc254d927e6aafe6127ec920f30efe61612b7ec6db33e72fb9500e736f757263652d616464726573730d0000000c6164647265737330783132330c736f757263652d636861696e0d00000006536f7572636504747970650d000000106d6573736167652d617070726f766564",
      "topic": "print",
      "value": {
        "data": {
          "command-id": {
            "buffer": Uint8Array [
              144,
              139,
              53,
              57,
              18,
              91,
              209,
              56,
              237,
              15,
              55,
              72,
              98,
              162,
              131,
              40,
              34,
              159,
              177,
              7,
              155,
              206,
              64,
              239,
              218,
              177,
              229,
              47,
              137,
              22,
              143,
              174,
            ],
            "type": 2,
          },
          "contract-address": {
            "address": {
              "hash160": "99e2ec69ac5b6e67b4e26edd0e2c1c1a6b9bbd23",
              "type": 0,
              "version": 26,
            },
            "type": 5,
          },
          "message-id": {
            "data": "1",
            "type": 13,
          },
          "payload-hash": {
            "buffer": Uint8Array [
              55,
              51,
              96,
              250,
              167,
              213,
              252,
              37,
              77,
              146,
              126,
              106,
              175,
              230,
              18,
              126,
              201,
              32,
              243,
              14,
              254,
              97,
              97,
              43,
              126,
              198,
              219,
              51,
              231,
              47,
              185,
              80,
            ],
            "type": 2,
          },
          "source-address": {
            "data": "address0x123",
            "type": 13,
          },
          "source-chain": {
            "data": "Source",
            "type": 13,
          },
          "type": {
            "data": "message-approved",
            "type": 13,
          },
        },
        "type": 12,
      },
    },
    "event": "print_event",
  },
]
`;

exports[`Gateway tests > message validation > reject re-approving a message 2`] = `[]`;

exports[`Gateway tests > message validation > reject re-approving a message 3`] = `
[
  {
    "data": {
      "contract_identifier": "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.gateway",
      "raw_value": "0x0c000000040a636f6d6d616e642d69640200000020908b3539125bd138ed0f374862a28328229fb1079bce40efdab1e52f89168fae0a6d6573736167652d69640d00000001310c736f757263652d636861696e0d00000006536f7572636504747970650d000000106d6573736167652d6578656375746564",
      "topic": "print",
      "value": {
        "data": {
          "command-id": {
            "buffer": Uint8Array [
              144,
              139,
              53,
              57,
              18,
              91,
              209,
              56,
              237,
              15,
              55,
              72,
              98,
              162,
              131,
              40,
              34,
              159,
              177,
              7,
              155,
              206,
              64,
              239,
              218,
              177,
              229,
              47,
              137,
              22,
              143,
              174,
            ],
            "type": 2,
          },
          "message-id": {
            "data": "1",
            "type": 13,
          },
          "source-chain": {
            "data": "Source",
            "type": 13,
          },
          "type": {
            "data": "message-executed",
            "type": 13,
          },
        },
        "type": 12,
      },
    },
    "event": "print_event",
  },
]
`;

exports[`Gateway tests > message validation > reject re-approving a message 4`] = `[]`;

exports[`Gateway tests > message validation > should approve and validate message 1`] = `
[
  {
    "data": {
      "contract_identifier": "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.gateway",
      "raw_value": "0x0c000000070a636f6d6d616e642d69640200000020908b3539125bd138ed0f374862a28328229fb1079bce40efdab1e52f89168fae10636f6e74726163742d61646472657373051a99e2ec69ac5b6e67b4e26edd0e2c1c1a6b9bbd230a6d6573736167652d69640d00000001310c7061796c6f61642d686173680200000020373360faa7d5fc254d927e6aafe6127ec920f30efe61612b7ec6db33e72fb9500e736f757263652d616464726573730d0000000c6164647265737330783132330c736f757263652d636861696e0d00000006536f7572636504747970650d000000106d6573736167652d617070726f766564",
      "topic": "print",
      "value": {
        "data": {
          "command-id": {
            "buffer": Uint8Array [
              144,
              139,
              53,
              57,
              18,
              91,
              209,
              56,
              237,
              15,
              55,
              72,
              98,
              162,
              131,
              40,
              34,
              159,
              177,
              7,
              155,
              206,
              64,
              239,
              218,
              177,
              229,
              47,
              137,
              22,
              143,
              174,
            ],
            "type": 2,
          },
          "contract-address": {
            "address": {
              "hash160": "99e2ec69ac5b6e67b4e26edd0e2c1c1a6b9bbd23",
              "type": 0,
              "version": 26,
            },
            "type": 5,
          },
          "message-id": {
            "data": "1",
            "type": 13,
          },
          "payload-hash": {
            "buffer": Uint8Array [
              55,
              51,
              96,
              250,
              167,
              213,
              252,
              37,
              77,
              146,
              126,
              106,
              175,
              230,
              18,
              126,
              201,
              32,
              243,
              14,
              254,
              97,
              97,
              43,
              126,
              198,
              219,
              51,
              231,
              47,
              185,
              80,
            ],
            "type": 2,
          },
          "source-address": {
            "data": "address0x123",
            "type": 13,
          },
          "source-chain": {
            "data": "Source",
            "type": 13,
          },
          "type": {
            "data": "message-approved",
            "type": 13,
          },
        },
        "type": 12,
      },
    },
    "event": "print_event",
  },
]
`;

exports[`Gateway tests > message validation > should approve and validate message 2`] = `
[
  {
    "data": {
      "contract_identifier": "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.gateway",
      "raw_value": "0x0c000000040a636f6d6d616e642d69640200000020908b3539125bd138ed0f374862a28328229fb1079bce40efdab1e52f89168fae0a6d6573736167652d69640d00000001310c736f757263652d636861696e0d00000006536f7572636504747970650d000000106d6573736167652d6578656375746564",
      "topic": "print",
      "value": {
        "data": {
          "command-id": {
            "buffer": Uint8Array [
              144,
              139,
              53,
              57,
              18,
              91,
              209,
              56,
              237,
              15,
              55,
              72,
              98,
              162,
              131,
              40,
              34,
              159,
              177,
              7,
              155,
              206,
              64,
              239,
              218,
              177,
              229,
              47,
              137,
              22,
              143,
              174,
            ],
            "type": 2,
          },
          "message-id": {
            "data": "1",
            "type": 13,
          },
          "source-chain": {
            "data": "Source",
            "type": 13,
          },
          "type": {
            "data": "message-executed",
            "type": 13,
          },
        },
        "type": 12,
      },
    },
    "event": "print_event",
  },
]
`;

exports[`Gateway tests > signer rotation > should rotate signers 1`] = `
[
  {
    "data": {
      "contract_identifier": "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.gateway",
      "raw_value": "0x0c000000040565706f63680100000000000000000000000000000002077369676e6572730c00000003056e6f6e6365020000000132077369676e6572730b000000040c00000002067369676e657202000000210277ad46cf1f82953116604c137c41d11fc095694d046417820a3d77253363b9040677656967687401000000000000000000000000000000010c00000002067369676e65720200000021031244d4c729f83c9e7898a85283e7460783a711746ba2ff24767443109ae1e64f0677656967687401000000000000000000000000000000010c00000002067369676e6572020000002103a59cff8eb6f7fd5972f24468e88ba23bd85960dfe0912c9434cabe92acf130d70677656967687401000000000000000000000000000000010c00000002067369676e657202000000210319ea093014a1cc7f4aa0219506c20bc1de1480ea157b9b28a088d5f8a70e63cb067765696768740100000000000000000000000000000001097468726573686f6c6401000000000000000000000000000000030c7369676e6572732d6861736802000000207146e0383fc88d294cdfde2685895a88f56d34c46f3e2296c4b5293b22481d5704747970650d0000000f7369676e6572732d726f7461746564",
      "topic": "print",
      "value": {
        "data": {
          "epoch": {
            "type": 1,
            "value": 2n,
          },
          "signers": {
            "data": {
              "nonce": {
                "buffer": Uint8Array [
                  50,
                ],
                "type": 2,
              },
              "signers": {
                "list": [
                  {
                    "data": {
                      "signer": {
                        "buffer": Uint8Array [
                          2,
                          119,
                          173,
                          70,
                          207,
                          31,
                          130,
                          149,
                          49,
                          22,
                          96,
                          76,
                          19,
                          124,
                          65,
                          209,
                          31,
                          192,
                          149,
                          105,
                          77,
                          4,
                          100,
                          23,
                          130,
                          10,
                          61,
                          119,
                          37,
                          51,
                          99,
                          185,
                          4,
                        ],
                        "type": 2,
                      },
                      "weight": {
                        "type": 1,
                        "value": 1n,
                      },
                    },
                    "type": 12,
                  },
                  {
                    "data": {
                      "signer": {
                        "buffer": Uint8Array [
                          3,
                          18,
                          68,
                          212,
                          199,
                          41,
                          248,
                          60,
                          158,
                          120,
                          152,
                          168,
                          82,
                          131,
                          231,
                          70,
                          7,
                          131,
                          167,
                          17,
                          116,
                          107,
                          162,
                          255,
                          36,
                          118,
                          116,
                          67,
                          16,
                          154,
                          225,
                          230,
                          79,
                        ],
                        "type": 2,
                      },
                      "weight": {
                        "type": 1,
                        "value": 1n,
                      },
                    },
                    "type": 12,
                  },
                  {
                    "data": {
                      "signer": {
                        "buffer": Uint8Array [
                          3,
                          165,
                          156,
                          255,
                          142,
                          182,
                          247,
                          253,
                          89,
                          114,
                          242,
                          68,
                          104,
                          232,
                          139,
                          162,
                          59,
                          216,
                          89,
                          96,
                          223,
                          224,
                          145,
                          44,
                          148,
                          52,
                          202,
                          190,
                          146,
                          172,
                          241,
                          48,
                          215,
                        ],
                        "type": 2,
                      },
                      "weight": {
                        "type": 1,
                        "value": 1n,
                      },
                    },
                    "type": 12,
                  },
                  {
                    "data": {
                      "signer": {
                        "buffer": Uint8Array [
                          3,
                          25,
                          234,
                          9,
                          48,
                          20,
                          161,
                          204,
                          127,
                          74,
                          160,
                          33,
                          149,
                          6,
                          194,
                          11,
                          193,
                          222,
                          20,
                          128,
                          234,
                          21,
                          123,
                          155,
                          40,
                          160,
                          136,
                          213,
                          248,
                          167,
                          14,
                          99,
                          203,
                        ],
                        "type": 2,
                      },
                      "weight": {
                        "type": 1,
                        "value": 1n,
                      },
                    },
                    "type": 12,
                  },
                ],
                "type": 11,
              },
              "threshold": {
                "type": 1,
                "value": 3n,
              },
            },
            "type": 12,
          },
          "signers-hash": {
            "buffer": Uint8Array [
              113,
              70,
              224,
              56,
              63,
              200,
              141,
              41,
              76,
              223,
              222,
              38,
              133,
              137,
              90,
              136,
              245,
              109,
              52,
              196,
              111,
              62,
              34,
              150,
              196,
              181,
              41,
              59,
              34,
              72,
              29,
              87,
            ],
            "type": 2,
          },
          "type": {
            "data": "signers-rotated",
            "type": 13,
          },
        },
        "type": 12,
      },
    },
    "event": "print_event",
  },
]
`;
